enable English blog

--- a/src/Updates/i18n/ArticlesSection.en.json
+++ b/src/Updates/i18n/ArticlesSection.en.json
@@ -10,7 +10,7 @@
   "groupTagMapping": {
     "all": "loopring",
     "biweekly": "biweekly",
-    "loopring3_0": "loopring3_0",
+    "loopring30": "loopring30",
     "learning": "learning",
     "thoughts": "thoughts",
     "news": "news"
