--- a/src/Updates/i18n/ArticlesSection.zh.json
+++ b/src/Updates/i18n/ArticlesSection.zh.json
@@ -11,7 +11,7 @@
   "groupTagMapping": {
     "all": "luyin",
     "biweekly": "shuangzhoubao",
-    "loopring3_0": "banben3_0",
+    "loopring30": "banben3_0",
     "learning": "xuexi",
     "thoughts": "sikao",
     "news": "xinwen"
