--- a/src/Updates/i18n/HeroSection.zh.json
+++ b/src/Updates/i18n/HeroSection.zh.json
@@ -2,7 +2,7 @@
   "headings": {
     "all": "<br/><br/>无需信任<br/>更具信任",
     "biweekly": "<br/><br/>驿寄梅花<br/>鱼传尺素",
-    "loopring3_0": "<br/><br/>安全高效<br/>鱼与熊掌兼得",
+    "loopring30": "<br/><br/>安全高效<br/>鱼与熊掌兼得",
     "learning": "<br/><br/>思而不学则殆",
     "thoughts": "<br/><br/>学而不思则罔",
     "news": "<br/><br/>信言亦美"
